--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,3 +22,8 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Upload JARs
+      uses: actions/upload-artifact@v2
+      with:
+        name: jar-files
+        path: target/*.jar
