--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,11 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Java CI with Maven
+name: Publish task
 
 on:
   release:
-    types: [ created ]
+    types: [published]
 
 jobs:
   build:
@@ -20,8 +20,8 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Upload JARs
-      uses: actions/upload-artifact@v2
+    - name: Upload JARs to release
+      uses: AButler/upload-release-assets@v2.0
       with:
         name: jar-files
         path: jdbc/target/*.jar
