--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,3 +26,4 @@ jobs:
       uses: AButler/upload-release-assets@v2.0
       with:
         files: jdbc/target/*.jar
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
