--- a/integrationtest/pom.xml
+++ b/integrationtest/pom.xml
@@ -31,6 +31,7 @@
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-core</artifactId>
+        <version>1.12.468</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.timestream</groupId>
@@ -39,23 +40,28 @@
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-timestreamquery</artifactId>
+        <version>1.12.472</version>
     </dependency>
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-timestreamwrite</artifactId>
+        <version>1.12.429</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <scope>compile</scope>
+        <version>5.9.2</version>
+        <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
+        <version>31.1-jre</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>jul-to-slf4j</artifactId>
+        <version>2.0.5</version>
     </dependency>
   </dependencies>
 </project>
