--- a/performancetest/pom.xml
+++ b/performancetest/pom.xml
@@ -30,6 +30,7 @@
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-core</artifactId>
+        <version>1.12.468</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.timestream</groupId>
@@ -38,27 +39,33 @@
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-timestreamquery</artifactId>
+        <version>1.12.472</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
+        <version>31.1-jre</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <scope>compile</scope>
+        <version>5.9.2</version>
+        <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>jul-to-slf4j</artifactId>
+        <version>2.0.5</version>
     </dependency>
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-sts</artifactId>
+        <version>1.12.468</version>
     </dependency>
     <dependency>
       <groupId>org.jsoup</groupId>
       <artifactId>jsoup</artifactId>
+        <version>1.15.4</version>
     </dependency>
   </dependencies>
 </project>
